# tiny-recursive-model

./: LICENSE  pyproject.toml
blog_post/: act.md  appendix.md  hrm.md  notes.md  trm.md  trm_bak.md  trm_triaged.md
tiny_recursive_model/: train.py  train_hrm.py
